Minor update to example stylesheet - the padding was corrected on the pfbc-select class so that the text would not be clipped.
git-svn-id: http://php-form-builder-class.googlecode.com/svn/trunk@328 18c9a15c-d092-11de-bb02-e302c5db49d5

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body, #pfbc_banner h2, #pfbc_banner h5 {
 
 .pfbc-select {
 	height: 34px;
+	padding: 6px;
 }
 
 .pfbc-form {
